--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
-    "chalk": "^4.0.0",
-    "node-notifier": "^7.0.0",
-    "node-telegram-bot-api": "^0.40.0",
-    "venom-bot": "^1.0.0"
+    "chalk": "5.1.2",
+    "node-notifier": "10.0.1",
+    "node-telegram-bot-api": "0.59.0",
+    "venom-bot": "^4.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.5",
-    "@types/node-notifier": "^6.0.1",
-    "@types/node-telegram-bot-api": "^0.40.3",
-    "jest": "^26.0.1",
-    "nodemon": "^2.0.3",
-    "npm-check-updates": "^4.1.2",
-    "ts-jest": "^25.4.0",
-    "ts-node": "^8.10.1",
-    "tslint": "^6.1.2",
-    "typescript": "^3.8.3"
+    "@types/jest": "29.2.0",
+    "@types/node": "18.11.3",
+    "@types/node-notifier": "8.0.2",
+    "@types/node-telegram-bot-api": "0.57.5",
+    "jest": "29.2.1",
+    "nodemon": "2.0.20",
+    "npm-check-updates": "16.3.14",
+    "ts-jest": "29.0.3",
+    "ts-node": "10.9.1",
+    "tslint": "6.1.3",
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "ts-jest"
